--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,8 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: rgba(255, 255, 255, 0.87);
+  color: rgb(181, 64, 181, 0.8);
   cursor: pointer;
   transition: border-color 0.25s;
 }
